--- a/catkin_ws/src/.gitignore
+++ b/catkin_ws/src/.gitignore
@@ -7,6 +7,6 @@
 !readme.MD
 
 # And these subdirectories
-!catkin_ws/
-!arena_control/
-!assets/
+!arena_camera/
+!arena_mapping/
+!arena_web_server/
