--- a/catkin_ws/src/arena_control/CMakeLists.txt
+++ b/catkin_ws/src/arena_control/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_service_files(
   FILES
   control_lights.srv
+  control_chargers.srv
 )
 
 generate_messages(
