--- a/catkin_ws/src/arena_control/srv/.gitignore
+++ b/catkin_ws/src/arena_control/srv/.gitignore
@@ -7,5 +7,7 @@
 !readme.MD
 !control_lights.srv
 !control_chargers.srv
+!LightBulbsControl.srv
+!RobotChargersControl.srv
 
 # And these subdirectories
