Update arena_control pkg

--- a/catkin_ws/src/arena_control/CMakeLists.txt
+++ b/catkin_ws/src/arena_control/CMakeLists.txt
@@ -13,8 +13,8 @@ find_package(catkin REQUIRED COMPONENTS
 
 add_service_files(
   FILES
-  control_lights.srv
-  control_chargers.srv
+  LightBulbsControl.srv
+  RobotChargersControl.srv 
 )
 
 generate_messages(
