--- a/catkin_ws/src/arena_web_server/scripts/services/.gitignore
+++ b/catkin_ws/src/arena_web_server/scripts/services/.gitignore
@@ -6,9 +6,9 @@
 !LICENSE
 !readme.MD
 
-!web_server_node.py
-!models.py
-!controller.py
+!Data.py
+!ROS.py
+!User.py
 
 # And these subdirectories
-!services/
+!persistence/
