--- a/catkin_ws/src/arena_web_server/scripts/services/persistence/.gitignore
+++ b/catkin_ws/src/arena_web_server/scripts/services/persistence/.gitignore
@@ -6,9 +6,7 @@
 !LICENSE
 !readme.MD
 
-!web_server_node.py
-!models.py
-!controller.py
+!DataBase.py
 
 # And these subdirectories
-!services/
+!models/
