Add new view Add fileManager.html Add recordings.html Add userManager.html

--- a/catkin_ws/src/arena_web_server/templates/.gitignore
+++ b/catkin_ws/src/arena_web_server/templates/.gitignore
@@ -6,10 +6,12 @@
 !LICENSE
 !readme.MD
 
-!home.html
-!index.html
-!viewer.html
 !login.html
+!home.html
+!recordings.html
+!fileManager.html
+!userManager.html
+
 
 # And these subdirectories
 !static/
