--- a/catkin_ws/src/arena_mapping/assets/images/.gitignore
+++ b/catkin_ws/src/arena_mapping/assets/images/.gitignore
@@ -6,9 +6,5 @@
 !LICENSE
 !readme.MD
 
-# And these subdirectories
-!assets/
-!launch/
-!rosbags/
-!scripts/
-!src/
+!no_image.jpg
+!white_background.png
