--- a/catkin_ws/src/arena_mapping/scripts/.gitignore
+++ b/catkin_ws/src/arena_mapping/scripts/.gitignore
@@ -6,9 +6,5 @@
 !LICENSE
 !readme.MD
 
-# And these subdirectories
-!assets/
-!launch/
-!rosbags/
-!scripts/
-!src/
+!aruco_detector.py
+!obstacles_color_calibrator.py
