--- a/catkin_ws/src/arena_mapping/package.xml
+++ b/catkin_ws/src/arena_mapping/package.xml
@@ -11,6 +11,8 @@
   <build_depend>rospy</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>tf2_ros</build_depend>
+  <build_depend>tf2_geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
@@ -22,6 +24,8 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>tf2_geometry_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
 
 
