--- a/catkin_ws/src/arena_control/.gitignore
+++ b/catkin_ws/src/arena_control/.gitignore
@@ -9,8 +9,10 @@
 !package.xml
 
 # And these subdirectories
+!arduino_firmware/
+!assets/
+!include/
+!launch/
 !src/
 !srv/
-!include/
 !include/arena_control/
-!arduino_firmware/
