--- a/catkin_ws/src/simulator_physics/motion_planner/.gitignore
+++ b/catkin_ws/src/simulator_physics/motion_planner/.gitignore
@@ -6,8 +6,13 @@
 !LICENSE
 !readme.MD
 
+!CMakeLists.txt
+!package.xml
+
 # And these subdirectories
-!arena_control/
-!arena_mapping/
-!arena_web_server/
-!simulator_physics/
+!include/
+!launch/
+!src/
+!srv/
+!state_machines/
+!utilities/
