Add hardware pkg simul

--- a/catkin_ws/src/simulator_physics/hardware/.gitignore
+++ b/catkin_ws/src/simulator_physics/hardware/.gitignore
@@ -6,7 +6,10 @@
 !LICENSE
 !readme.MD
 
+!CMakeLists.txt
+!package.xml
+
 # And these subdirectories
-!hardware/
-!mobile_base/
-!motion_planner/
+!include/
+!src/
+!srv/
