--- a/catkin_ws/src/simulator_physics/hardware/package.xml
+++ b/catkin_ws/src/simulator_physics/hardware/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>motion_planner</name>
+  <name>hardware</name>
   <version>0.0.0</version>
-  <description>The motion_planner package</description>
+  <description>The hardware package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/motion_planner</url> -->
+  <!-- <url type="website">http://wiki.ros.org/hardware</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -52,23 +52,22 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_depend>tf2_geometry_msgs</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
-
+  
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>tf2_geometry_msgs</exec_depend>
-  
-  <depend>hardware</depend>
 
-  <!-- <build_depend>message_generation</build_depend>
-  <exec_depend>message_runtime</exec_depend> -->
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
