--- a/catkin_ws/src/simulator_physics/motion_planner/state_machines/.gitignore
+++ b/catkin_ws/src/simulator_physics/motion_planner/state_machines/.gitignore
@@ -7,6 +7,9 @@
 !readme.MD
 
 !light_follower.h
+!sm_avoid_obstacles.h
+!sm_avoidance_destination.h
 !sm_destination.h
+!user_sm.h
 
 # And these subdirectories
