--- a/catkin_ws/src/simulator_physics/hardware/CMakeLists.txt
+++ b/catkin_ws/src/simulator_physics/hardware/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(catkin REQUIRED COMPONENTS
   tf2_ros
   tf2_geometry_msgs
   message_generation
+  random_numbers
 )
 
 add_service_files(
