--- a/catkin_ws/src/simulator_physics/mobile_base/src/.gitignore
+++ b/catkin_ws/src/simulator_physics/mobile_base/src/.gitignore
@@ -7,6 +7,8 @@
 !readme.MD
 
 !mobile_base_node_simul.cpp
+!mobile_base_node.cpp
 !move_minibot_node_simul.cpp
+!move_minibot_node.cpp
 
 # And these subdirectories
