Update ros-params Update odom position for mobile_base

--- a/catkin_ws/src/simulator_physics/mobile_base/CMakeLists.txt
+++ b/catkin_ws/src/simulator_physics/mobile_base/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_service_files(
   FILES
   MoveMinibot.srv
+  OdomSetPoint.srv
 )
 
 ## Generate added messages and services with any dependencies listed here
