Add robot_simulator dir

--- a/catkin_ws/src/robot_simulator/.gitignore
+++ b/catkin_ws/src/robot_simulator/.gitignore
@@ -7,7 +7,6 @@
 !readme.MD
 
 # And these subdirectories
-!arena_control/
-!arena_mapping/
-!arena_web_server/
-!robot_simulator/
+!hardware/
+!mobile_base/
+!motion_planner/
