--- a/catkin_ws/src/robot_simulator/hardware/srv/.gitignore
+++ b/catkin_ws/src/robot_simulator/hardware/srv/.gitignore
@@ -6,8 +6,6 @@
 !LICENSE
 !readme.MD
 
+!LightReadings.srv
+
 # And these subdirectories
-!arena_control/
-!arena_mapping/
-!arena_web_server/
-!robot_simulator/
