--- a/catkin_ws/src/robot_simulator/motion_planner/include/motion_planner/.gitignore
+++ b/catkin_ws/src/robot_simulator/motion_planner/include/motion_planner/.gitignore
@@ -6,8 +6,6 @@
 !LICENSE
 !readme.MD
 
+!motion_planner.h
+!motion_planner_utilities.h
 # And these subdirectories
-!arena_control/
-!arena_mapping/
-!arena_web_server/
-!robot_simulator/
