--- a/catkin_ws/src/robot_simulator/mobile_base/include/.gitignore
+++ b/catkin_ws/src/robot_simulator/mobile_base/include/.gitignore
@@ -6,8 +6,8 @@
 !LICENSE
 !readme.MD
 
+!CMakeLists.txt
+!package.xml
+
 # And these subdirectories
-!arena_control/
-!arena_mapping/
-!arena_web_server/
-!robot_simulator/
+!mobile_base/
