--- a/catkin_ws/src/robot_simulator/motion_planner/params/motion.yaml
+++ b/catkin_ws/src/robot_simulator/motion_planner/params/motion.yaml
@@ -2,7 +2,8 @@
 behavior: "light_follower"
 
 max_advance_distance: 0.15
-max_turn_angle: 0.7854
-
+# max_turn_angle: 0.7854
+# max_turn_angle: 1.5708
+max_turn_angle: 2.3562
 # THRESHOLDS FOR BEHAVIOR'S TESTS
 threshold_follower: 800
