--- a/catkin_ws/src/robot_simulator/mobile_base/assets/params/movement_params.yaml
+++ b/catkin_ws/src/robot_simulator/mobile_base/assets/params/movement_params.yaml
@@ -1,3 +1,7 @@
+# ROBOT'S POSITION FOR SIMULATION
+robot_pose_x: 0.90
+robot_pose_y: 0.62
+robot_pose_w: 0.0
 # PARAM TO ENABLE MOVEMENTS FROM move_minibot_node
 enable_movements: false
 # TIME LIMIT FOR MOVEMENTS [ms]
